# url2ref

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  Rocket.toml  docker-compose.yml  fly.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: build_and_test.yml  ci.yml  deploy.yml  fly-deploy.yml  pr-preview.yml  url2ref.yml
docs/: book.toml
docs/src/: SUMMARY.md  installation.md  introduction.md
docs/src/cli/: ai-extraction.md  basic-usage.md  citation-formats.md  index.md  metadata-priority.md  translation.md
docs/src/development/: architecture.md  contributing.md
docs/src/installation/: docker.md  from-source.md
docs/src/reference/: api.md  citation-formats.md  environment-variables.md  metadata-sources.md
docs/src/web/: configuration.md  features.md  getting-started.md  index.md
docs/theme/: custom.css
npm/: package-lock.json  package.json
src/: attribute.rs  citation.rs  doi.rs  generator.rs  lib.rs  opengraph.rs  parser.rs  reference.rs  schema_org.rs
src/schema_org/: author.rs  generic.rs
static/css/: url2ref.css
static/custom/sass/: url2ref.scss
templates/: layout.html.tera
tests/: opengraph_tests.rs  schema_org_tests.rs  test.rs  test_priority.rs  test_suite.rs
tests/data/: 'Vi er lidt forvirrede over, hvad der er sket_' Ekstremt klimaudsatte ø-stater kom for sent, da klimaaftale blev vedtaget _ Klima _ DR.html  Efter den vildeste lynmanøvre_ Klimaaftale på plads i Dubai _ Information.html  Ledende universitetsrektorers holdninger til antisemitisme udløser ramaskrig i USA - politiken.dk.html  Nyt kompromis kan blive »historisk«. Men der er stadig ingen udfasning af fossile brændsler _ Information.html  »I år skal jeg for første gang lave kamstegen på grillen«.html
tests/data/case1/: expected.yml  politiken_dk_2023-12-11.html
tests/data/case2/: expected.yml  »I år skal jeg for første gang lave kamstegen på grillen«.html
tests/data/case3/: 'Vi er lidt forvirrede over, hvad der er sket_' Ekstremt klimaudsatte ø-stater kom for sent, da klimaaftale blev vedtaget _ Klima _ DR.html  expected.yml
tests/data/case4/: Efter den vildeste lynmanøvre_ Klimaaftale på plads i Dubai _ Information.html  expected.yml
tests/data/case5/: expected.yml
tests/data/case6/: He Might Have Been Pope. Instead, He May Go to Prison. - WSJ.html  expected.yml  wsj_com_2023-12-12.html
tests/data/case7/: the_sun.html
tests/utils/: mod.rs
url2ref/: Cargo.toml
url2ref-cli/: Cargo.toml
url2ref-cli/src/: main.rs
url2ref-web/: .env  .env.example  .gitignore  Cargo.toml  config.toml
url2ref-web/npm/: build.sh  package.json
url2ref-web/src/: form.rs  main.rs  scss.rs
url2ref-web/static/custom/: archive.js  citation.js  custom.js  language.js  main.js  metadata.js  modal.js  utilities.js
url2ref-web/static/custom/sass/: url2ref.scss
url2ref-web/templates/: home.html.tera  layout.html.tera
url2ref/src/: ai_extractor.rs  attribute.rs  citation.rs  curl.rs  doi.rs  generator.rs  html_meta.rs  lib.rs  microdata.rs  opengraph.rs  parser.rs  reference.rs  schema_org.rs  utils.rs  zotero.rs
url2ref/src/schema_org/: generic.rs  site.rs
url2ref/tests/: test_suite.rs
url2ref/tests/data/case1/: expected.yml
url2ref/tests/data/case2/: expected.yml  jyllands-posten_dk_2023-12-13.html
url2ref/tests/data/case3/: dr_dk_2023-12-13.html
url2ref/tests/data/case4/: expected.yml  information_dk_2023-12-13.html
url2ref/tests/data/case5/: expected.yml  information_dk_2023-12-13.html
url2ref/tests/data/case7/: expected.yml  the-sun_co-uk_2023-12-14.html
url2ref/tests/utils/: mod.rs
