[package]
name = "url2ref"
version = "0.1.0"
edition = "2021"
rust-version = "1.76.0"
authors = ["The url2ref developers"]
license = "GPLv3"
readme = "README.md"
repository = "https://github.com/url2ref/url2ref"
keywords = ["semantic web", "reference generation"]
description = "Generate a reference from a web address"
default-run = "url2ref-web"

[[bin]]
name = "url2ref-cli"
path = "src/bin/cli/main.rs"

[[bin]]
name = "url2ref-web"
path = "src/bin/web/main.rs"

[dependencies]
chrono = "0.4.31"
strum = { version = "0.25", features = ["derive"] }
clap = {version = "4.4.11", features = ["derive"]}
grass = "0.13.1"
rocket = "0.5.0"
rocket_dyn_templates = { version = "0.1.0", features = ["tera"] }
tera = "1.19.1"
thiserror = "1.0.50"
webpage = "2.0.0"
