[package]
name = "url2ref-web"
version = "0.1.0"
edition = "2021"
rust-version = "1.76.0"
authors = ["The url2ref developers"]
license = "GPLv3"
readme = "../README.md"
repository = "https://github.com/url2ref/url2ref"
keywords = ["semantic web", "reference generation"]
description = "Web front end for the url2ref library"

[dependencies]
url2ref = { path = "../url2ref" }
dotenv = "0.15.0"
grass = "0.13.1"
rocket = { version = "0.5.0", features = ["json"] }
rocket_dyn_templates = { version = "0.2.0", features = ["tera"] }
serde = { version = "1.0", features = ["derive"] }
tera = "1.19.1"
thiserror = "1.0.50"
toml = "0.8"