[package]
name = "url2ref"
version = "0.2.0"
edition = "2021"
rust-version = "1.76.0"
authors = ["The url2ref developers"]
license = "GPLv3"
readme = "../README.md"
repository = "https://github.com/url2ref/url2ref"
keywords = ["semantic web", "reference generation"]
description = "Generate a reference from a web address"

[dependencies]
biblatex = "0.9.1"
chrono = "0.4.31"
curl = "0.4.44"
deepl-api = "0.4.3"
derive_builder = "0.20.0"
htmlescape = "0.3"
regex = "1.10.2"
scraper = "0.18"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_yaml = "0.9.27"
strum = { version = "0.26", features = ["derive"] }
thiserror = "1.0.50"
urlencoding = "2.1"
webpage = "2.0.0"
log = "0.4"
